The events sections is almost complete and horizontal scrolling has been disabled. The tasks that remain at hand are fixing the our team section and little UI cleanup.

--- a/static/styles/ieee-cs.css
+++ b/static/styles/ieee-cs.css
@@ -1,3 +1,11 @@
+::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    overflow-x:hidden;
+}
+
 html {
     height: 100%;
 }
